# uacpi-linux

./: .gitmodules  CMakeLists.txt  README.md  heap.c  heap.h  main.c  main.h  osl.c  sys.h
